# jhPrimeminer

./: README.md
src/: primecoinMiner.sln
src/primecoinMiner/: CMakeLists.txt  bn2.cpp  global.h  jsonClient.cpp  jsonParser.cpp  jsonrpc.cpp  main.cpp  miner.cpp  prime.cpp  prime.h  primecoinMiner.vcxproj  primecoinMiner.vcxproj.filters  sha256.cpp  sha256.h  xptServer.cpp
src/primecoinMiner/jhlib/: JHLib.h  critSec.h  fastString.h  fastString_eprintf.cpp  sData.cpp  streamWrapper.cpp
src/primecoinMiner/lib/linux/: setupmpir.sh
